Use FileReferenceCount in InMemoryFileInfoStoreTest